Hold an instance template's body instead of quoting it, and the collection boundary goes
result => <T> ( T | error ) resolves. §5.10 called a parameter inside a collection-valued slot "a
deliberate boundary of this revision", but the boundary was never the problem's: template_argument
is a typed quotation with cases for param, value and type_ref and none for a collection, and §5.10's
uniformity clause required every open instance body to be one. So a body the reference channel could
have carried unchanged had to be re-expressed in a vocabulary that could not hold it. Holding the
body instead removes the vocabulary and the boundary together. SPEC-FEEDBACK #5 has the argument.

§12.1's instance production takes its parameter list back, so Instance carries one and the separate
instance-template/template-def/template-bind productions delete along with their payload
restrictions -- a collection payload is now as ordinary as a scalar one, because the payload is held
rather than read against the constructor's vocabulary until materialisation substitutes. That is one
production where there were two, and it takes ast.schema.InstanceTemplate, TemplateBinding,
schema.meta.InstanceTemplate and TemplateArgument with it.

SchemaDesugarer.instanceTemplate collapses into instance: one binding record serves the open and
closed forms alike, since a parameter in a slot is simply the token standing there, and the per-slot
analysis that had to decide how to quote each one -- along with the refusal it ended at -- is gone.
DefinitionResolver wraps a parameterized Instance in a HeldBody rather than resolving it.
TemplateMaterialiser substitutes over the held tree in one walk, where three steps used to be needed:
a parameter in a slot, one inside an application a slot holds, and one inside a collection are the
same thing once nothing has been quoted.

The naming order is load-bearing and is not the one that reads right. Applications inside a held body
close before internalName runs, because